--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "OneDriveSync",
+	"name": "OneDrive Sync",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Sync your vault with OneDrive cloud storage.",
+	"author": "Diego Rios Vasquez",
+	"authorUrl": "https://github.com/diegoVasquez600",
+	"fundingUrl": "https://github.com/diegoVasquez600",
 	"isDesktopOnly": false
 }
