--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@microsoft/microsoft-graph-types": "^2.40.0",
+		"@types/microsoft-graph": "^2.40.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -20,5 +22,9 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@azure/msal-node": "^3.2.1",
+		"@microsoft/microsoft-graph-client": "^3.0.7"
 	}
 }
